# PersonalLearningPartner

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  demo_data.py  main.py  models.py  store.py
backend/app/services/: __init__.py  analyzer.py
backend/app/static/: demo.css  demo.html  demo.js
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md
