[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-partner-backend"
version = "0.1.0"
description = "Starter backend for local-first learning partner app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]

[tool.setuptools]
packages = ["app", "app.services"]
